tests/cmd_fix_bad.out
./cmd_fix_bad.svx:2:9: error: Expecting numeric field, found ""
 *fix A 0
         ^
./cmd_fix_bad.svx:3:11: error: Expecting numeric field, found ""
 *fix B 0 0
           ^
./cmd_fix_bad.svx:4:30: error: Expecting numeric field, found ""
 *fix C 0 0 0 1.0 2.0 3.0 3.14
                              ^
./cmd_fix_bad.svx:5:35: error: Expecting numeric field, found ""
 *fix D 0 0 0 1.0 2.0 3.0 3.14 2.18
                                   ^
./cmd_fix_bad.svx:6:8: error: Expecting numeric field, found "test"
 *fix E test
        ^~~~
./cmd_fix_bad.svx:8:20: error: Expecting numeric field, found ""
 *fix Ar reference 0
                    ^
./cmd_fix_bad.svx:9:22: error: Expecting numeric field, found ""
 *fix Br reference 0 0
                      ^
./cmd_fix_bad.svx:10:41: error: Expecting numeric field, found ""
 *fix Cr reference 0 0 0 1.0 2.0 3.0 3.14
                                         ^
./cmd_fix_bad.svx:11:46: error: Expecting numeric field, found ""
 *fix Dr reference 0 0 0 1.0 2.0 3.0 3.14 2.18
                                              ^
./cmd_fix_bad.svx:12:19: error: Expecting numeric field, found "test"
 *fix Er reference test
                   ^~~~
./cmd_fix_bad.svx:14:31: error: Standard deviation must be positive
 *fix W1 reference 123 456 789 0
                               ^
./cmd_fix_bad.svx:15:31: error: Standard deviation must be positive
 *fix W2 reference 123 456 789 0 0
                               ^
./cmd_fix_bad.svx:16:31: error: Standard deviation must be positive
 *fix W3 reference 123 456 789 0 0 0
                               ^
./cmd_fix_bad.svx:17:32: error: Standard deviation must be positive
 *fix W1m reference 123 456 789 -1
                                ^~
./cmd_fix_bad.svx:18:32: error: Standard deviation must be positive
 *fix W2m reference 123 456 789 -1 -1
                                ^~
./cmd_fix_bad.svx:19:32: error: Standard deviation must be positive
 *fix W3m reference 123 456 789 -1 -1 -1
                                ^~
./cmd_fix_bad.svx:20:32: error: Standard deviation must be positive
 *fix W1o reference 123 456 789 -1 0
                                ^~
./cmd_fix_bad.svx:21:32: error: Standard deviation must be positive
 *fix W2o reference 123 456 789 0 -1
                                ^
./cmd_fix_bad.svx:22:32: error: Standard deviation must be positive
 *fix W3o reference 123 456 789 0 -1 -1
                                ^
./cmd_fix_bad.svx:23:32: error: Standard deviation must be positive
 *fix W4o reference 123 456 789 -1 0 -1
                                ^~
./cmd_fix_bad.svx:24:32: error: Standard deviation must be positive
 *fix W5o reference 123 456 789 -1 -1 0
                                ^~
./cmd_fix_bad.svx:25:32: error: Standard deviation must be positive
 *fix W6o reference 123 456 789 0 0 -1
                                ^
./cmd_fix_bad.svx:26:32: error: Standard deviation must be positive
 *fix W7o reference 123 456 789 0 -1 0
                                ^
./cmd_fix_bad.svx:27:32: error: Standard deviation must be positive
 *fix W8o reference 123 456 789 -1 0 0
                                ^~
./cmd_fix_bad.svx:28:31: error: Standard deviation must be positive
 *fix X1 reference 123 456 789 0 0.1
                               ^
./cmd_fix_bad.svx:29:35: error: Standard deviation must be positive
 *fix X2 reference 123 456 789 0.1 0
                                   ^
./cmd_fix_bad.svx:30:32: error: Standard deviation must be positive
 *fix X1m reference 123 456 789 -0.1 0.1
                                ^~~~
./cmd_fix_bad.svx:31:36: error: Standard deviation must be positive
 *fix X2m reference 123 456 789 0.1 -0.1
                                    ^~~~
./cmd_fix_bad.svx:32:31: error: Standard deviation must be positive
 *fix Y1 reference 123 456 789 0 0.1 0.1
                               ^
./cmd_fix_bad.svx:33:35: error: Standard deviation must be positive
 *fix Y2 reference 123 456 789 0.1 0 0.1
                                   ^
./cmd_fix_bad.svx:34:39: error: Standard deviation must be positive
 *fix Y3 reference 123 456 789 0.1 0.1 0
                                       ^
./cmd_fix_bad.svx:35:31: error: Standard deviation must be positive
 *fix Y4 reference 123 456 789 0 0 0.1
                               ^
./cmd_fix_bad.svx:36:31: error: Standard deviation must be positive
 *fix Y5 reference 123 456 789 0 0.1 0
                               ^
./cmd_fix_bad.svx:37:35: error: Standard deviation must be positive
 *fix Y6 reference 123 456 789 0.1 0 0
                                   ^
./cmd_fix_bad.svx:38:32: error: Standard deviation must be positive
 *fix Y1m reference 123 456 789 -1 0.1 0.1
                                ^~
./cmd_fix_bad.svx:39:36: error: Standard deviation must be positive
 *fix Y2m reference 123 456 789 0.1 -1 0.1
                                    ^~
./cmd_fix_bad.svx:40:40: error: Standard deviation must be positive
 *fix Y3m reference 123 456 789 0.1 0.1 -1
                                        ^~
./cmd_fix_bad.svx:41:32: error: Standard deviation must be positive
 *fix Y4m reference 123 456 789 -1 -1 0.1
                                ^~
./cmd_fix_bad.svx:42:32: error: Standard deviation must be positive
 *fix Y5m reference 123 456 789 -1 0.1 -1
                                ^~
./cmd_fix_bad.svx:43:36: error: Standard deviation must be positive
 *fix Y6m reference 123 456 789 0.1 -1 -1
                                    ^~
./cmd_fix_bad.svx:51:6: error: Station already fixed or equated to a fixed point
 *fix W 0 0 1
      ^
./cmd_fix_bad.svx:49:6: info: Previously fixed or equated here
./cmd_fix_bad.svx:52:6: error: Station already fixed or equated to a fixed point
 *fix Wa 0 0 2
      ^~
./cmd_fix_bad.svx:50:9: info: Previously fixed or equated here
./cmd_fix_bad.svx:53:6: error: Station already fixed or equated to a fixed point
 *fix Wb 0 0 3
      ^~
./cmd_fix_bad.svx:50:14: info: Previously fixed or equated here
./cmd_fix_bad.svx:54:8: info: FIX command with no coordinates - fixing at (0,0,0)
 *fix Wa;comment
        ^
./cmd_fix_bad.svx:54:6: warning: Station already fixed at the same coordinates
 *fix Wa;comment
      ^~
./cmd_fix_bad.svx:50:9: info: Previously fixed or equated here
./cmd_fix_bad.svx:57:17: error: Expecting numeric field, found ""
 *fix Z reference
                 ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 4 survey stations, joined by 2 legs.
There are 0 loops.
Survey has 2 connected components.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m

There were 1 warning(s) and 44 error(s) - no output files produced.
